new proj/src/objects/GE_MDM_Event_Processing__c.object
<CustomObject>
    <description>Used to track GE MDM Upsert, Merge, and Hierarchy Change events.</description>
    <fields>
        <fullName>Bill_To_Address_Line_1__c</fullName>
        <label>Bill To Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Line_2__c</fullName>
        <label>Bill To Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Line_3__c</fullName>
        <label>Bill To Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <label>Bill To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country_Code__c</fullName>
        <label>Bill To Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State_Province__c</fullName>
        <label>Bill To State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Zip__c</fullName>
        <label>Bill To Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_DUNS__c</fullName>
        <label>Child DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDUNS_Name__c</fullName>
        <label>DDUNS Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDUNS_Number__c</fullName>
        <label>DDUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Associated__c</fullName>
        <label>DUNS Associated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Domestic_Ultimate__c</fullName>
        <label>DUNS Domestic Ultimate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Global_Ultimate__c</fullName>
        <label>DUNS Global Ultimate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Parent__c</fullName>
        <label>DUNS Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Previous__c</fullName>
        <label>DUNS Previous</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_Name__c</fullName>
        <label>Domestic Ultimate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>UPSERT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MERGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REL_CHANGE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_DUNS__c</fullName>
        <label>From DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Global_Customer_Indicator__c</fullName>
        <description>If GE Global Customer Indicator = “Y”, you need to treat this event as an UPSERT on a Strategic Account (i.e. GEGUL).
If GE Global Customer Indicator = “N”, you need to treat this event as an UPSERT on a regular Account.</description>
        <label>GE Global Customer Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Marketing_Name__c</fullName>
        <label>GE Marketing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_Name__c</fullName>
        <label>Global Ultimate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gold_ID__c</fullName>
        <label>Gold ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Parent_Name__c</fullName>
        <label>HQ Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_To_Address__c</fullName>
        <label>Mail To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_To_City__c</fullName>
        <label>Mail To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_To_Country_Code__c</fullName>
        <label>Mail To Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_To_State_Province__c</fullName>
        <label>Mail To State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_To_Zip__c</fullName>
        <label>Mail To Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Name__c</fullName>
        <label>Parent Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Type__c</fullName>
        <label>Parent Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_DUNS__c</fullName>
        <label>Parent DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Segment__c</fullName>
        <label>Parent Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <label>Publish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Relationship_Change_Sub_Type__c</fullName>
        <description>INSERT_REL - A new relationship has been established.
INVALIDATE_REL - A relationship has ended.</description>
        <label>Relationship Change Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>INSERT_REL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVALIDATE_REL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_Date_From__c</fullName>
        <label>Relationship Date From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Relationship_Date_To__c</fullName>
        <label>Relationship Date To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Line_1__c</fullName>
        <label>Ship To Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Line_2__c</fullName>
        <label>Ship To Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Line_3__c</fullName>
        <label>Ship To Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country_Code__c</fullName>
        <label>Ship To Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State_Province__c</fullName>
        <label>Ship To State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip__c</fullName>
        <label>Ship To Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_DUNS__c</fullName>
        <label>To DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upsert_Sub_Type__c</fullName>
        <label>Upsert Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>INSERT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPDATE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vat_Number__c</fullName>
        <label>Vat Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GE MDM - Event Processing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>DUNS_Number__c</columns>
        <columns>From_DUNS__c</columns>
        <columns>To_DUNS__c</columns>
        <columns>Child_DUNS__c</columns>
        <columns>Parent_DUNS__c</columns>
        <columns>Upsert_Sub_Type__c</columns>
        <columns>Relationship_Change_Sub_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Wave6</fullName>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>DUNS_Number__c</columns>
        <columns>From_DUNS__c</columns>
        <columns>To_DUNS__c</columns>
        <columns>Child_DUNS__c</columns>
        <columns>Parent_DUNS__c</columns>
        <columns>Upsert_Sub_Type__c</columns>
        <columns>Relationship_Change_Sub_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Rick May,Kamran Mahmood</value>
        </filters>
        <label>Wave6</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Webmethods_Integration</fullName>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>DUNS_Number__c</columns>
        <columns>From_DUNS__c</columns>
        <columns>To_DUNS__c</columns>
        <columns>Child_DUNS__c</columns>
        <columns>Parent_DUNS__c</columns>
        <columns>Upsert_Sub_Type__c</columns>
        <columns>Relationship_Change_Sub_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Webmethods Integration</value>
        </filters>
        <label>Webmethods Integration</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EP-{0000000}</displayFormat>
        <label>GE MDM – Event Processing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GE MDM - Event Processing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>